<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_launcher_background"
        android:translationX="19dp"
        tools:ignore="MissingConstraints" />

    <!-- Main Logo -->
    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerInside"
        android:src="@drawable/taia"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- App Name Text over the Image -->
    <TextView
        android:id="@+id/appNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playpen_medium"
        android:gravity="center"
        android:text="@string/record_your_day"
        android:translationY="5dp"
        android:textColor="#010A0F"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/loadingProgressBar"
        app:layout_constraintBottom_toBottomOf="@id/loadingProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Tagline Text over the Image -->
    <TextView
        android:id="@+id/taglineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:alpha="0.8"
        android:background="#D3000000"
        android:fontFamily="@font/playpen"
        android:text="@string/record_your_day_tagline"
        android:textColor="@color/splash_subtitle_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appNameText" />

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="66dp"
        android:layout_height="61dp"
        android:layout_marginTop="100dp"
        android:indeterminateTint="@color/splash_accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taglineText" />

    <!-- Loading Text -->
    <TextView
        android:id="@+id/loadingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Loading..."
        android:textColor="@color/splash_accent_color"
        android:textSize="14sp"
        android:alpha="0.7"
        app:layout_constraintTop_toBottomOf="@id/loadingProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>



    <!-- Logo View -->
    <LinearLayout
        android:id="@+id/logoAndCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/loadingProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <!-- Logo -->

        <!-- Credit text -->
        <ImageView
            android:id="@+id/logoView"
            android:layout_width="81dp"
            android:layout_height="84dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/sayday_logo" />

        <TextView
            android:id="@+id/creditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Made with Love by Sophie G"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>
